<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".fragments.NordicFragment">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:text="@string/label_device_address"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_device_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_margin="10dp">

        <TextView android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_data"
            android:textColor="@color/MintCream"
            android:gravity="center"
            android:textSize="22sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/btn_Toggle_led"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/Led_ToggleBtn"
            android:textOff="Led Off"
            android:textOn="Led On"
            android:background="@color/MintCream"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>
</LinearLayout>

